quote alignment fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 10%;
-  position: absolute;
+  /* position: absolute; */
 }
 
 #weather {
